RDB-414 test